# catch_registerstaticlibrary

./: .gitignore  README.MD  catch_main.cpp  get_catch_hpp_ifneeded.sh
examples/: README.MD  get_catch_hpp_if_needed.sh
examples/example_fail/: CMakeLists.txt  README.MD  build.bat  build.sh  catch
examples/example_fail/MyLibrary/: CMakeLists.txt
examples/example_register/: CMakeLists.txt  README.MD  build.sh  catch  catch_registerstaticlibrary
examples/example_register/MyLibrary/: CMakeLists.txt
examples/example_register_processed/: CMakeLists.txt  README.MD
examples/example_register_processed/MyLibrary/: CMakeLists.txt  catch_registerstaticlibrary.cpp  lib1.cpp  lib2.cpp  rsl_registerstaticlibrary.cpp
src/: catch_main.cpp  catch_registerstaticlibrary.cmake  catch_registerstaticlibrary.py  rsl_registerstaticlibrary.cmake  rsl_registerstaticlibrary.py
